--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>  
       <!--cdn animate.css  -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+      <!-- sweetalert2 pour les pop up -->
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Bigscreen</title>
   </head>
   <body>
